# zed-sheet-lsp

./: .gitignore  Cargo.toml  README.md  build.sh  extension.toml  house-price.tsv  sheets-session.nu  test_imports.rs  zed-sheets-blueprint.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: release.yml
.zed/extensions/zed-sheets/languages/sheet_markdown/: config.toml
.zed/extensions/zed-sheets/languages/tsv/: config.toml
.zed/extensions/zed-sheets/src/: lib.rs  main.rs
demo/: PITCH.md  README.md  demo-record.sh  demo-standalone.sh  demo.sh  tsv-preview-session.nu  tsv-preview-session.sh
demo/assets/: sample.tsv
docs/: MVP_SHEET_MODEL.md  NUSTAGE_INTEGRATION.md  NUSTAGE_REUSE_AUDIT.md  STACK_BOUNDARIES.md  TEAM_ARCHITECTURE.md
languages/tsv/: highlights.scm
src/: Cargo.toml  lib.rs
tests/: test_core.rs  test_integration.rs  test_suite.rs
tests/fixtures/: circular_test.tsv  circular_test.zedsheets.json  sample.tsv  sample.zedsheets.json  test_basic.tsv  test_basic.zedsheets.json
zed-sheets-lsp/: Cargo.toml
zed-sheets-lsp/src/: completions.rs  core.rs  dag.rs  diagnostics.rs  document.rs  document.rs.backup  lib.rs  main.rs  model.rs  sidecar.rs
zed-sheets-lsp/tests/: golden_path.rs
zed-sheets-lsp/tests/fixtures/golden/: demo.nustage.json  demo.sheet.md
zed-sheets-lsp/tests/fixtures/golden/docs/: user.md
