[package]
name = "zed-sheets-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
chrono = "0.4"

[[bin]]
name = "zed-sheets-lsp"
path = "src/main.rs"
